# venturalitica-sdk

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Annex_IV.md  CHANGELOG.md  CITATION.cff  IMPLEMENTATION_MULTICLASS_CAUSAL.md  LICENSE  METRICS_GUIDE.md  README.md  RELEASE_NOTES.md  bom.json  index.html  index.md  llms-full.txt  llms-small.txt  llms.txt  mkdocs.yml  mlflow.db  model_policy.oscal.yaml  publiccode.yml  pyproject.toml  sitemap-0.xml  sitemap-index.xml  sitemap.xml  test_monitor_label.py  tutorial_execution.py  verify_strict_mode.py
.github/workflows/: ci.yml  pages.yml  publish.yml
.venturalitica/: config.json  results.json  state.json
_astro/: Search.astro_astro_type_script_index_0_lang.DlMUgSiy.js  index.9Kobpi59.css  index.B3J6hWru.css  index.CmEZyrpY.css  index.D1wVQVRL.css  index.D9-7khrC.css  ui-core.BFcconJK.js
academy/: index.html  index.md
academy/level1-policy/: index.html
academy/level1_policy/: index.html  index.md
academy/level2-integrator/: index.html
academy/level2_integrator/: index.html  index.md
academy/level3-auditor/: index.html
academy/level3_auditor/: index.html  index.md
academy/level4-annex-iv/: index.html
academy/level4_annex_iv/: index.html  index.md
annex-iv/: index.html  index.md
api/: index.html  index.md
compliance-dashboard/: index.html  index.md
compliance-gap/: index.html  index.md
concepts/compliance-by-design/: index.html
docs/: MIGRATING.md  README.md  RELEASE_CHECKLIST.md  advanced.md  annex-iv.md  annex_iv_alignment.md  api.md  cli-tools.md  compliance-dashboard.md  compliance-gap.md  compliance-mapping.md  core-concepts.md  evidence-collection.md  green-ai.md  index.md  integrations.md  multiclass-fairness.md  oscal-authoring.md  policy-authoring.md  quickstart.md  strict_mode.md  training.md  tutorial.md
docs/.archive/: README.md  advanced.md  cli-tools.md  compliance-dashboard.md  core-concepts.md  evidence-collection.md  green-ai.md  mlops-integration.md  oscal-authoring.md  training.md  tutorial.md
docs/academy/: index.md  level1_policy.md  level2_integrator.md  level3_auditor.md  level4_annex_iv.md
docs/contracts/: cross-component-smoke.md  oscal-assessment-plan-v1.md
docs/development/: cross-component-smoke.md
docs/es/: annex-iv.md  api.md  column-binding.md  compliance-dashboard.md  compliance-gap.md  evidence-collection.md  experimental.md  full-lifecycle.md  index.md  integrations.md  multiclass-fairness.md  policy-authoring.md  quickstart.md  training.md
docs/scenarios/: loan-fairness.md
docs/tutorials/: 01_writing_policy.md  local-audit.md
es/: index.html  index.md
es/academy/: index.html  index.md
es/annex-iv/: index.html  index.md
es/api/: index.html  index.md
es/compliance-dashboard/: index.html  index.md
es/compliance-gap/: index.html  index.md
es/evidence-collection/: index.html  index.md
es/full-lifecycle/: index.html
es/integrations/: index.html  index.md
es/migrating/: index.html
es/quickstart/: index.html  index.md
es/training/: index.html  index.md
evidence-collection/: index.html  index.md
full-lifecycle/: index.html
guides/column-binding/: index.html
guides/compliance-mapping/: index.html
guides/dashboard/: index.html
guides/experimental/: index.html
guides/policy-authoring/: index.html
integrations/: index.html  index.md
migrating/: index.html
notebooks/: 00-quickstart.ipynb  01-training-tutorial.ipynb  policy.oscal.yaml
notebooks/.ipynb_checkpoints/: 01-training-tutorial-checkpoint.ipynb
notebooks/.venturalitica/: results.json
pagefind/: pagefind-entry.json  pagefind.en_2bd3c51e2a.pf_meta  pagefind.en_7817b7698c.pf_meta  pagefind.en_8761a466db.pf_meta  pagefind.en_c9f246c296.pf_meta  pagefind.en_ffb415faf2.pf_meta  pagefind.es_57c0be8264.pf_meta  pagefind.es_87a8ae27f5.pf_meta  pagefind.es_bc4ac0967d.pf_meta  pagefind.es_d9d6dcfd2c.pf_meta  pagefind.es_f1c029f1de.pf_meta  pagefind.pt_4d761f2ecd.pf_meta  pagefind.pt_93daba82ec.pf_meta  pagefind.pt_a2c19d8359.pf_meta  pagefind.pt_b3d7f7accd.pf_meta  pagefind.pt_b596a8802c.pf_meta
pagefind/fragment/: en_124e357.pf_fragment  en_18fcf62.pf_fragment  en_228223d.pf_fragment  en_2b14bc7.pf_fragment  en_303339f.pf_fragment  en_3137d6d.pf_fragment  en_3da13ed.pf_fragment  en_3ebb659.pf_fragment  en_48ae3ff.pf_fragment  en_4a79b13.pf_fragment  en_4e41c22.pf_fragment  en_4f20f83.pf_fragment  en_5450a8f.pf_fragment  en_5eb687c.pf_fragment  en_5f5cfdd.pf_fragment  en_6078f2c.pf_fragment  en_644825a.pf_fragment  en_687161f.pf_fragment  en_6eca75e.pf_fragment  en_71b0a8e.pf_fragment  en_7628b99.pf_fragment  en_77d4f5d.pf_fragment  en_78324b1.pf_fragment  en_86d52f9.pf_fragment  en_87431e2.pf_fragment  en_8b7e10c.pf_fragment  en_8c863e3.pf_fragment  en_8ff8141.pf_fragment  en_95c838b.pf_fragment  en_9d3e77b.pf_fragment  en_a68b5ae.pf_fragment  en_b42f9d0.pf_fragment  en_b6b9308.pf_fragment  en_bac674b.pf_fragment  (+102 more)
portal/: hugo.toml  package.json
pt/: index.html
quickstart/: index.html  index.md
scripts/: publish.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
starlight/: astro.config.mjs  package-lock.json  package.json
tests/: test_abstract.py  test_artifacts.py  test_badges.py  test_binding.py  test_cli.py  test_cli_coverage.py  test_cli_sync.py  test_cli_transfer.py  test_core.py  test_coverage_improvements.py  test_dashboard.py  test_enforce.py  test_enforce_strict.py  test_enforcement_semantics.py  test_enhanced_metrics.py  test_fallbacks.py  test_formatting.py  test_graph_nodes.py  test_graph_parser.py  test_graph_workflow.py  test_group_balance.py  test_imaging_metrics.py  test_inference.py  test_inference_edge_cases.py  test_init.py  test_integrations.py  test_llm_catalog.py  test_llm_providers.py  test_llm_registry.py  test_loader.py  test_local_assistant.py  test_metrics.py  test_multiclass_and_causal.py  test_nodes.py  test_oscal_output.py  test_oscal_roundtrip.py  test_output.py  test_output_interpretation.py  test_policy.py  test_power.py  (+15 more)
training/: index.html  index.md
(+318 files in other folders)
