[project]
name = "venturalitica"
version = "0.2.1"
description = "Frictionless Governance for AI. Enforce policies in your ML training with one line of code."
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Venturalitica", email = "hello@venturalitica.com"}
]
keywords = ["ai", "governance", "fairness", "mlops", "eu-ai-act", "oscal", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "PyYAML>=6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "cyclonedx-python-lib>=6.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "streamlit>=1.30.0",
    "compliance-trestle>=3.4.0",
    "ucimlrepo>=0.0.3",
]

[project.urls]
Homepage = "https://venturalitica.com"
Documentation = "https://venturalitica.github.io/venturalitica-sdk/"
Repository = "https://github.com/Venturalitica/venturalitica-sdk"
Changelog = "https://github.com/Venturalitica/venturalitica-sdk/releases"

[project.scripts]
venturalitica = "venturalitica.cli:app"

[project.optional-dependencies]
metrics = [
    "fairlearn>=0.10.0",
]
torch = [
    "torch>=2.0.0",
]
full = [
    "venturalitica[metrics,torch]",
]
green = [
    "codecarbon>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/venturalitica"]

[dependency-groups]
dev = [
    "clearml>=2.1.2",
    "codecarbon>=3.2.1",
    "fairlearn>=0.13.0",
    "mlflow>=3.1.4",
    "psutil>=7.2.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "wandb>=0.24.0",
]
docs = [
    "mkdocs-llmstxt>=0.4.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=0.30.1",
]
